fix: text-align p

--- a/portafolio/src/App.css
+++ b/portafolio/src/App.css
@@ -46,6 +46,9 @@
   h3 {
     font-weight: lighter;
   }
+  p {
+    text-align: justify;
+  }
   .avatar {
     display: flex;
     flex-direction: row;
@@ -166,7 +169,9 @@
     font-weight: lighter;
     font-size: 18px;
   }
-
+  p {
+    text-align: justify;
+  }
   .avatar {
     display: flex;
     flex-direction: column;
